# orion

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  PHASE1_COMPLETE.md  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
design/: implementation_plan.md  orion_design_prompt.md  system_design_detailed.md
src/orion/: __init__.py  cli.py  config.py
src/orion/storage/: __init__.py  database.py  repository.py
src/orion/utils/: logging.py
tests/: test_project_setup.py
tests/unit/: test_config.py  test_logging.py  test_storage.py
